# piplanning_agents

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  run_streamlit.py  setup.py
samples/: sample_snapshot.json
src/: __init__.py  main.py
src/agents/: __init__.py  ai_agent_base.py  base_agents.py  data_agent.py  dependency_agent.py  objective_agent.py  program_manager.py  reporting_agent.py  risk_agent.py  team_agent.py
src/core/: __init__.py  agent_factory.py  events.py  models.py  orchestrator.py  strategies.py
src/integrations/: __init__.py  ado_client.py
src/ui/: __init__.py  console_ui.py  program_board_html.py  state_manager.py  streamlit_app.py  visualizations.py
src/ui/components/: data_preview.py  reporting.py  sidebar.py
src/utils/: __init__.py  cli_parser.py  config.py  output_manager.py  status_checker.py
tests/: test_dependencies_fetch.py  test_integration.py  test_milestone_fetch.py  test_planning_logic.py
